--- a/requirements.txt
+++ b/requirements.txt
@@ -103,3 +103,24 @@ willow==0.4               # via wagtail
 xlrd==1.1.0               # via pytablereader
 xlsxwriter==0.9.9         # via pytablewriter
 xlwt==1.3.0               # via pytablewriter
+
+boto3==1.17.49
+botocore==1.20.49
+certifi==2020.12.5
+chardet==4.0.0
+idna==2.10
+jmespath==0.10.0
+numpy==1.20.2
+python-dateutil==2.8.1
+regex==2021.4.4
+requests==2.25.1
+s3transfer==0.3.6
+six==1.15.0
+torch==1.1.0
+tqdm==4.60.0
+typing-extensions==3.7.4.3
+urllib3==1.26.4
+
+scipy ~= 1.4
+tensorflow ~= 2.11.0
+tensorflow-probability ~= 0.15
