--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,18 @@
 PyYAML==6.0
+attrs==21.2.0
+certifi==2021.5.30
+charset-normalizer==2.0.4
+idna==3.2
+iniconfig==1.1.1
+pluggy==0.13.1
+py==1.10.0
+pyparsing==2.4.7
+pytest==6.2.4
+requests==2.26.0
+toml==0.10.2
+Jinja2==3.1.1
+attrs==21.2.0
+certifi==2021.5.30
+PyYAML==6.0
+beautifulsoup4==4.8.2
+xmltodict==0.12.0
