--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,16 @@ attrs==21.2.0
 certifi==2021.5.30
 PyYAML==6.0
 
+
+
+beautifulsoup4==4.8.2
+xmltodict==0.12.0
+jira==3.0a2
+sqlitedict==1.7.0
+google-cloud-functions==0.5.0
+packaging==20.9
+urllib3==1.26.3
+termcolor==1.1.0
+absl-py==0.9.0
+aiohttp==3.6.2
+aioredis==1.3.1
