--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,24 @@ termcolor==1.1.0
 absl-py==0.9.0
 aiohttp==3.6.2
 aioredis==1.3.1
+
+
+
+astunparse==1.6.3
+async-timeout==3.0.1
+attr==0.3.1
+attrs==19.3.0
+beautifulsoup4==4.9.1
+blessings==1.7
+bunch==1.0.1
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.0
+chardet==3.0.4
+click==7.1.2
+cloudpickle==1.5.0
+colorama==0.4.3
+colorful==0.5.4
+#conda==4.8.3
+#conda-package-handling==1.7.0
+cryptography==3.2
