--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,22 @@ jira==3.0a2
 sqlitedict==1.7.0
 google-cloud-functions==0.5.0
 packaging==20.9
+
+
+
+
+urllib3==1.26.3
+termcolor==1.1.0
+absl-py==0.9.0
+aiohttp==3.6.2
+aioredis==1.3.1
+astunparse==1.6.3
+async-timeout==3.0.1
+attr==0.3.1
+attrs==19.3.0
+beautifulsoup4==4.9.1
+blessings==1.7
+bunch==1.0.1
+cachetools==4.1.1
+certifi==2020.6.20
+cffi==1.14.0
