--- a/requirements.txt
+++ b/requirements.txt
@@ -77,3 +77,77 @@ Jinja2==2.11.2
 joblib==0.16.0
 jsonschema==3.2.0
 
+
+
+
+
+
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+Markdown==3.2.2
+MarkupSafe==1.1.1
+matplotlib==3.3.0
+mkl-fft>=1.1.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+msgpack==1.0.0
+multidict==4.7.6
+networkx==2.4
+numpy==1.18.5
+nvidia-ml-py3==7.352.0
+oauthlib==3.1.0
+olefile==0.46
+opencensus==0.7.10
+opencensus-context==0.1.1
+opencv-python==4.3.0.38
+opt-einsum==3.3.0
+pandas==1.1.0
+pathspec==0.8.0
+Pillow==7.2.0
+prometheus-client==0.8.0
+prompt-toolkit==3.0.6
+protobuf==3.12.4
+psutil==5.7.2
+py-spy==0.3.3
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycocotools==2.0.1
+pycosat==0.6.3
+pycparser==2.20
+PyJWT==1.7.1
+pyOpenSSL==19.1.0
+pyparsing==2.4.7
+pyrsistent==0.16.0
+PySocks==1.7.1
+git+https://github.com/ildoonet/pystopwatch2.git # pystopwatch2==0.1.1 
+python-dateutil==2.8.1
+pytz==2020.1
+PyWavelets==1.1.1
+PyYAML==5.3.1
+ray==0.8.7
+redis==3.4.1
+requests==2.23.0
+requests-oauthlib==1.3.0
+requests-toolbelt==0.9.1
+rsa==4.6
+ruamel-yaml==0.15.87
+scikit-image==0.17.2
+scikit-learn==0.23.2
+scipy==1.4.1
+six==1.14.0
+sklearn==0.0
+smmap==3.0.4
+soupsieve==2.0.1
+tabulate==0.8.7
+tensorboard==2.3.0
+tensorboard-plugin-wit==1.7.0
+tensorboardX==2.1
+tensorflow==2.3.1
+tensorflow-estimator==2.3.0
+tensorflow-gpu==2.3.1
+termcolor==1.1.0
+threadpoolctl==2.1.0
+tifffile==2020.7.24
+torch==1.4.0
+torchvision==0.5.0
+tqdm==4.46.0
