--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,28 @@
 certifi==2021.5.30
+py==1.10.0
 
+
+
+Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
+Markdown==3.2.2
+MarkupSafe==1.1.1
+matplotlib==3.3.0
+mkl-fft>=1.1.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+msgpack==1.0.0
+multidict==4.7.6
+networkx==2.4
+numpy==1.18.5
+nvidia-ml-py3==7.352.0
+oauthlib==3.1.0
+olefile==0.46
+opencensus==0.7.10
+opencensus-context==0.1.1
+opencv-python==4.3.0.38
+opt-einsum==3.3.0
+pandas==1.1.0
+pathspec==0.8.0
+Pillow==7.2.0
+prometheus-client==0.8.0
